--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="Web site created using create-react-app"
     />
     <!-- <link rel="preconnect"> -->
-    <title>React App</title>
+    <title>FoodX</title>
   </head>
   <body>
     
